<resources>
    <string name="app_name">FNF Locator</string>
    <string name="action_settings">Settings</string>
    <string name="login_screen">Welcome to FNF Locator!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="create_user_button">Create User</string>
    <string name="bypass_button">Bypass</string>
    <string name="wrong_password">Wrong Username and Password Combination</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="title_activity_create_clock">CreateClockActivity</string>
    <string name="title_activity_display_clock">DisplayClockActivity</string>
    <string name="menu_refreshService">Refresh</string>
    <string name="create_clock">Create Clock</string>
    <string name="mode">Mode: </string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="school">School</string>
    <string name="traveling">traveling</string>
    <string name="refresh_rate">Refresh Rate</string>
    <string name="refresh_summary">How often locations are updated</string>
    <string name="mode_summary">Automatic or Manual control of Location</string>
    <string name="welcome">Welcome: </string>
    <string name="username_summary">Set when you Login</string>
    <string name="create_clockname">Clock Name</string>
    <string name="clock_name_hint">Enter a Name for the clock</string>
    <string name="users">Users</string>
    <string name="userOne_hint">Enter up to</string>
    <string name="userTwo_hint">Four friends</string>
    <string name="user3_hint">To add to</string>
    <string name="user4_hint">The clock!</string>
    <string name="create_clock_button">Create Clock</string>
    <string name="clock_created">Clock Created!</string>
    <string name="location_updated">Location Updated!</string>
    <string name="location">Location</string>
    <string name="location_summary">Updated by interacting with the App</string>
    <string name="GPS">GPS</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">WiFi</string>
    <string name="home_value">ID</string>
    <string name="home_value_hint">Enter GPS, SSID, Bluetooth Address</string>
    <string-array name="refreshNames">
        <item>1 min</item>
        <item>5 mins</item>
        <item>30 mins</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="refreshValues">
        <item>60</item>
        <item>300</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>
    <string-array name="modeNames">
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>
    <string name="main_nav_menu_item_home">Home</string>
    <string name="title_activity_item_detail">Item Detail</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_main">@string/app_name</string>
    <string name="title_activity_sign_in">Sign-in</string>
    <string name="button_text_sign_in">SIGN IN</string>
    <string name="button_text_sign_out">SIGN OUT</string>
    <string name="fragment_demo_instruction_overview_header">Overview</string>
    <string name="fragment_demo_instruction_description_header">Sample App Features</string>
    <string name="feature_sign_in_title">User Sign-in</string>
    <string name="feature_sign_in_subtitle">Let your users sign in with public identity providers or your own identity system.</string>
    <string name="feature_sign_in_overview">Whether your users sign in or not, the User sign-in feature configures Amazon Cognito to uniquely identify the user and provide your app the appropriate credentials to access your AWS resources.</string>
    <string name="feature_sign_in_description">The Sample App demonstrates assignment of a unique identifier for the user, the Amazon Cognito User ID. If optional or mandatory User Sign-in has been enabled in your project, then the Sample App also includes a sign-in screen, with a button for each configured sign-in provider.</string>
    <string name="feature_sign_in_powered_by">Powered by Amazon Cognito</string>
    <string name="feature_sign_in_demo_button">Demo User Identity</string>
    <string name="main_nav_menu_item_identity_demo">User Identity</string>
    <string name="main_fragment_title_user_identity">User Identity</string>
    <string name="main_fragment_subtitle_user_identity">Keep track of users</string>
    <string name="identity_demo_text_view_description">Displays the user identity.</string>
    <string name="unknown_user">Guest User</string>
    <string name="user_id">USER IDENTIFIER</string>
    <string name="identity_demo_textview_username_description">User\'s name</string>
    <string name="identity_demo_textview_userid_description">User\'s unique identifier</string>
    <string name="identity_demo_unknown_identity_text">&lt;UNKNOWN IDENTITY&gt;</string>
    <string name="identity_demo_dialog_dismiss_text">DISMISS</string>
    <string name="identity_demo_error_dialog_title">Failed Identity Retrieval</string>
    <string name="identity_demo_error_message_failed_get_identity">Could not retrieve the user identity:\u0020</string>
    <string name="feature_nosql_database_title">NoSQL Database</string>
    <string name="feature_nosql_database_subtitle">Store data in the cloud.</string>
    <string name="feature_nosql_database_overview">Store data in the cloud.</string>
    <string name="feature_nosql_database_description">The Sample App demonstrates how to access your configured Amazon DynamoDB NoSQL database tables. Select your table, insert sample data, and perform queries by choosing from a list of examples. Hold down an item in query results to update or delete the item. When you\'re done with the demo, you can remove the sample data from your table.</string>
    <string name="feature_nosql_database_powered_by">Powered by Amazon DynamoDB</string>
    <string name="main_fragment_title_nosql_database">NoSQL Database</string>
    <string name="feature_nosql_database_demo_button">Demo NoSQL Database</string>
    <string name="main_fragment_title_nosql_select_operation">NoSQL Demo: %s</string>
    <string name="main_fragment_title_nosql_select_table">NoSQL Demo: Select Table</string>
    <string name="nosql_select_table_item_partition_key_text">Partition Key</string>
    <string name="nosql_select_table_item_sort_key_text">Sort Key</string>
    <string name="nosql_select_table_index_count_text">Indexes</string>
    <string name="nosql_dialog_title_failed_dynamodb_describe_table_text">Failed retrieving schema for table \'%s\'.</string>
    <string name="nosql_dialog_title_failed_operation_text">Operation Failed</string>
    <string name="nosql_dialog_title_failed_loading_more_results">Failed Loading More Results</string>
    <string name="nosql_dialog_title_failed_update_item_text">Update Item Failed</string>
    <string name="nosql_dialog_title_failed_delete_item_text">Delete Item Failed</string>
    <string name="nosql_database_table_item_creation_date_text">Created %s</string>
    <string name="nosql_insert_sample_data_button_text">INSERT SAMPLE DATA</string>
    <string name="nosql_remove_sample_data_button_text">REMOVE SAMPLE DATA</string>
    <string name="nosql_dialog_title_remove_confirmation">Confirm Removal of Sample Items</string>
    <string name="nosql_dialog_message_remove_confirmation">This will remove all your sample items.  Are you sure?</string>
    <string name="nosql_dialog_title_added_sample_data_text">Added Sample Data</string>
    <string name="nosql_dialog_message_added_sample_data_text">20 Sample Items with random data were added to your table.</string>
    <string name="nosql_dialog_title_removed_sample_data_text">Removed Sample Data</string>
    <string name="nosql_dialog_message_removed_sample_data_text">All Sample Items have been removed from your table.</string>
    <string name="nosql_dialog_ok_text">OK</string>
    <string name="nosql_operation_header_get">Get</string>
    <string name="nosql_operation_header_primary_queries">Primary Index Queries</string>
    <string name="nosql_operation_header_secondary_queries">Secondary Index Queries (%s)</string>
    <string name="nosql_operation_header_scan">Scan</string>
    <string name="nosql_operation_get_by_partition_text">Get Item</string>
    <string name="nosql_operation_example_get_by_partition_text">Find Item with %1$s = \'%2$s\'.</string>
    <string name="nosql_operation_get_by_partition_and_sort_text">Get Item</string>
    <string name="nosql_operation_example_get_by_partition_and_sort_text">Find Item with %1$s = \'%2$s\' and %3$s = \'%4$s\'.</string>
    <string name="nosql_operation_title_query_by_partition_and_sort_condition_text">Query by Partition Key and Sort Condition</string>
    <string name="nosql_operation_example_query_by_partition_and_sort_condition_text">Find all items with %1$s = \'%2$s\' and %3$s &lt; \'%4$s\'.</string>
    <string name="nosql_operation_title_query_by_partition_text">Query by Partition Key</string>
    <string name="nosql_operation_example_query_by_partition_text">Find all items with %1$s = \'%2$s\'.</string>
    <string name="nosql_operation_title_query_by_partition_and_filter_text">Query by Partition Key and Filter</string>
    <string name="nosql_operation_example_query_by_partition_and_filter_text">Find all items with %1$s = \'%2$s\' and %3$s &gt; \'%4$s\'.</string>
    <string name="nosql_operation_title_query_by_partition_sort_condition_and_filter_text">Query by Partition Key, Sort Condition, and Filter</string>
    <string name="nosql_operation_example_query_by_partition_sort_condition_and_filter_text">Find all items with %1$s = \'%2$s\', %3$s &lt; \'%4$s\', and %5$s &gt; \'%6$s\'.</string>
    <string name="nosql_operation_title_index_query_by_partition_and_sort_condition_text">Query by Partition Key and Sort Condition</string>
    <string name="nosql_operation_example_index_query_by_partition_and_sort_condition_text">Find all items with %1$s = \'%2$s\' and %3$s &gt; \'%4$s\'.</string>
    <string name="nosql_operation_title_index_query_by_partition_text">Query by Partition Key</string>
    <string name="nosql_operation_example_index_query_by_partition_text">Find all items with %1$s = \'%2$s\'.</string>
    <string name="nosql_operation_title_index_query_by_partition_and_filter_text">Query by Partition Key and Filter</string>
    <string name="nosql_operation_example_index_query_by_partition_and_filter_text">Find all items with %1$s = \'%2$s\' and %3$s &gt; \'%4$s\'.</string>
    <string name="nosql_operation_title_index_query_by_partition_sort_condition_and_filter_text">Query by Partition Key, Sort Condition, and Filter</string>
    <string name="nosql_operation_example_index_query_by_partition_sort_condition_and_filter_text">Find all items with %1$s = \'%2$s\', %3$s &lt; \'%4$s\', and %5$s &gt; \'%6$s\'.</string>
    <string name="nosql_operation_title_scan_with_filter">Scan with Filter</string>
    <string name="nosql_operation_example_scan_with_filter">Find all items with \'%1$s\' &gt; \'%2$s\'.</string>
    <string name="nosql_operation_example_scan_with_filter_on_partition_and_sort">Find all items with \'%1$s\' beginning with \'%2$s\' and \'%3$s\' beginning with \'%4$s\'.</string>
    <string name="nosql_operation_example_scan_with_filter_on_partition">Find all items with \'%1$s\' beginning with \'%2$s\'</string>
    <string name="nosql_operation_title_scan_without_filter">Scan</string>
    <string name="nosql_operation_example_scan_without_filter">Show all items in the table.</string>
    <string name="nosql_dialog_title_pending_results_text">Please wait&#8230;</string>
    <string name="nosql_dialog_message_pending_results_text">Waiting for the response to load the results.</string>
</resources>